--- a/EDA_authorized_transactions.ipynb
+++ b/EDA_authorized_transactions.ipynb
@@ -1,11 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an analysis of the authorized transactional data only. The authorized transactions are separated from the posted data. This is done as most authorized transactional data is functionally dependent on the payment type being an EFTPOS payment. On the other hand, posted transactions have less information (often causing data inconsistencies at retrieval) and is functionally dependent on payment types like internet banking, phone banking, and general cash payments. These have no record of a card checking mechanism and hence present a security issue."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# These are necessary libraries that is enabled in Python to perform the analysis\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import datetime\n"
+   ]
   }
  ],
  "metadata": {
