--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ANZ task: Explore the data and tell a visual story"
+    "# Hypothesis: "
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,28 +37,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 'DATA/original-data.xlsx'"
+    "file = 'DATA/original-data.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(file)"
+    "df = pd.read_csv(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "Index(['timestamps', 'date', 'status', 'age', 'gender', 'txn_description',\n",
@@ -68,9 +69,8 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 55,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
@@ -79,35 +79,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "timestamps                   object\n",
-       "date                 datetime64[ns]\n",
-       "status                       object\n",
-       "age                           int64\n",
-       "gender                       object\n",
-       "txn_description              object\n",
-       "balance                     float64\n",
-       "amount                      float64\n",
-       "card_present_flag           float64\n",
-       "long                        float64\n",
-       "lat                         float64\n",
-       "geometry                     object\n",
-       "merchant_suburb              object\n",
-       "merchant_state               object\n",
-       "merchant_long_lat            object\n",
-       "merch_long                  float64\n",
-       "merch_lat                   float64\n",
+       "timestamps            object\n",
+       "date                  object\n",
+       "status                object\n",
+       "age                    int64\n",
+       "gender                object\n",
+       "txn_description       object\n",
+       "balance              float64\n",
+       "amount               float64\n",
+       "card_present_flag    float64\n",
+       "long                 float64\n",
+       "lat                  float64\n",
+       "geometry              object\n",
+       "merchant_suburb       object\n",
+       "merchant_state        object\n",
+       "merchant_long_lat     object\n",
+       "merch_long           float64\n",
+       "merch_lat            float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 56,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
@@ -845,9 +845,7 @@
      ]
     }
    ],
-   "source": [
-    "trans_authorized.plot.bar(x=df.card_present_flag, y=df.index)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -859,9 +857,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python385jvsc74a57bd0fed0582dd0f62e7b91ae4e148d4ebda650a472aff94eaa95239d49c000006593",
+   "display_name": "Python 3.8.5 64-bit (conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -873,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
