--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,22 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Index(['timestamps', 'date', 'status', 'age', 'gender', 'txn_description',\n",
-       "       'balance', 'amount', 'card_present_flag', 'long', 'lat', 'geometry',\n",
-       "       'merchant_suburb', 'merchant_state', 'merchant_long_lat', 'merch_long',\n",
+       "Index(['timestamp', 'date', 'status', 'age', 'gender', 'txn_description',\n",
+       "       'balance', 'amount', 'card_present', 'long', 'lat', 'geometry',\n",
+       "       'merch_suburb', 'merch_state', 'merch_geometry', 'merch_long',\n",
        "       'merch_lat'],\n",
        "      dtype='object')"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 110
     }
    ],
    "source": [
@@ -79,35 +79,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "timestamps            object\n",
-       "date                  object\n",
-       "status                object\n",
-       "age                    int64\n",
-       "gender                object\n",
-       "txn_description       object\n",
-       "balance              float64\n",
-       "amount               float64\n",
-       "card_present_flag    float64\n",
-       "long                 float64\n",
-       "lat                  float64\n",
-       "geometry              object\n",
-       "merchant_suburb       object\n",
-       "merchant_state        object\n",
-       "merchant_long_lat     object\n",
-       "merch_long           float64\n",
-       "merch_lat            float64\n",
+       "timestamp           object\n",
+       "date                object\n",
+       "status              object\n",
+       "age                  int64\n",
+       "gender              object\n",
+       "txn_description     object\n",
+       "balance            float64\n",
+       "amount             float64\n",
+       "card_present       float64\n",
+       "long               float64\n",
+       "lat                float64\n",
+       "geometry            object\n",
+       "merch_suburb        object\n",
+       "merch_state         object\n",
+       "merch_geometry      object\n",
+       "merch_long         float64\n",
+       "merch_lat          float64\n",
        "dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 111
     }
    ],
    "source": [
@@ -116,36 +116,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "timestamps              0\n",
-       "date                    0\n",
-       "status                  0\n",
-       "age                     0\n",
-       "gender                  0\n",
-       "txn_description         0\n",
-       "balance                 0\n",
-       "amount                  0\n",
-       "card_present_flag    4326\n",
-       "long                    0\n",
-       "lat                     0\n",
-       "geometry                0\n",
-       "merchant_suburb      4326\n",
-       "merchant_state       4326\n",
-       "merchant_long_lat    4326\n",
-       "merch_long              0\n",
-       "merch_lat               0\n",
-       "time                    0\n",
+       "timestamp             0\n",
+       "date                  0\n",
+       "status                0\n",
+       "age                   0\n",
+       "gender                0\n",
+       "txn_description       0\n",
+       "balance               0\n",
+       "amount                0\n",
+       "card_present       4326\n",
+       "long                  0\n",
+       "lat                   0\n",
+       "geometry              0\n",
+       "merch_suburb       4326\n",
+       "merch_state        4326\n",
+       "merch_geometry     4326\n",
+       "merch_long            0\n",
+       "merch_lat             0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 91,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 112
     }
    ],
    "source": [
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,36 +162,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "timestamps           0\n",
-       "date                 0\n",
-       "status               0\n",
-       "age                  0\n",
-       "gender               0\n",
-       "txn_description      0\n",
-       "balance              0\n",
-       "amount               0\n",
-       "card_present_flag    0\n",
-       "long                 0\n",
-       "lat                  0\n",
-       "geometry             0\n",
-       "merchant_suburb      0\n",
-       "merchant_state       0\n",
-       "merchant_long_lat    0\n",
-       "merch_long           0\n",
-       "merch_lat            0\n",
-       "time                 0\n",
+       "timestamp          0\n",
+       "date               0\n",
+       "status             0\n",
+       "age                0\n",
+       "gender             0\n",
+       "txn_description    0\n",
+       "balance            0\n",
+       "amount             0\n",
+       "card_present       0\n",
+       "long               0\n",
+       "lat                0\n",
+       "geometry           0\n",
+       "merch_suburb       0\n",
+       "merch_state        0\n",
+       "merch_geometry     0\n",
+       "merch_long         0\n",
+       "merch_lat          0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 93,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 114
     }
    ],
    "source": [
@@ -201,11 +199,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['timestamps'] = pd.to_datetime(df['timestamps'], format='%Y-%m-%d %H:%M:%S')"
+    "df['timestamp'] = pd.to_datetime(df['timestamp'], format='%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['date'] = pd.to_datetime(df['date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = pd.CategoricalDtype(categories=['authorized', 'posted'], ordered=True)\n",
+    "df.status = df.status.astype(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0        authorized\n",
+       "1        authorized\n",
+       "2        authorized\n",
+       "3        authorized\n",
+       "4        authorized\n",
+       "            ...    \n",
+       "12038    authorized\n",
+       "12039    authorized\n",
+       "12040    authorized\n",
+       "12041    authorized\n",
+       "12042    authorized\n",
+       "Name: status, Length: 12043, dtype: category\n",
+       "Categories (2, object): ['authorized' < 'posted']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 118
+    }
+   ],
+   "source": [
+    "df.status"
+   ]
+  },
+  {
+   "source": [
+    "b = pd.BooleanDtype()\n",
+    "df.card_present_bool = df.card_present.astype(b)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 119,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-119-bdd53cd22bb1>:2: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n  df.card_present_bool = df.card_present.astype(b)\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0         True\n",
+       "1        False\n",
+       "2         True\n",
+       "3         True\n",
+       "4         True\n",
+       "         ...  \n",
+       "12038    False\n",
+       "12039     True\n",
+       "12040     True\n",
+       "12041     True\n",
+       "12042     True\n",
+       "Name: card_present, Length: 12043, dtype: boolean"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 120
+    }
+   ],
+   "source": [
+    "df.card_present_bool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = pd.CategoricalDtype(categories=['M', 'F'], ordered=True)\n",
+    "df.gender = df.gender.astype(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0        F\n",
+       "1        F\n",
+       "2        M\n",
+       "3        F\n",
+       "4        F\n",
+       "        ..\n",
+       "12038    F\n",
+       "12039    M\n",
+       "12040    M\n",
+       "12041    M\n",
+       "12042    M\n",
+       "Name: gender, Length: 12043, dtype: category\n",
+       "Categories (2, object): ['M' < 'F']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 122
+    }
+   ],
+   "source": [
+    "df.gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.age = df.age.astype('int32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0        26\n",
+       "1        26\n",
+       "2        38\n",
+       "3        40\n",
+       "4        26\n",
+       "         ..\n",
+       "12038    30\n",
+       "12039    20\n",
+       "12040    28\n",
+       "12041    69\n",
+       "12042    31\n",
+       "Name: age, Length: 12043, dtype: int32"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 124
+    }
+   ],
+   "source": [
+    "df.age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0        1.0\n",
+       "1        0.0\n",
+       "2        1.0\n",
+       "3        1.0\n",
+       "4        1.0\n",
+       "        ... \n",
+       "12038    0.0\n",
+       "12039    1.0\n",
+       "12040    1.0\n",
+       "12041    1.0\n",
+       "12042    1.0\n",
+       "Name: card_present, Length: 12043, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 125
+    }
+   ],
+   "source": [
+    "df.card_present"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0        26\n",
+       "1        26\n",
+       "2        38\n",
+       "3        40\n",
+       "4        26\n",
+       "         ..\n",
+       "12038    30\n",
+       "12039    20\n",
+       "12040    28\n",
+       "12041    69\n",
+       "12042    31\n",
+       "Name: age, Length: 12043, dtype: int32"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 126
+    }
+   ],
+   "source": [
+    "df.age"
    ]
   },
   {
@@ -857,7 +1099,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd0fed0582dd0f62e7b91ae4e148d4ebda650a472aff94eaa95239d49c000006593",
+   "name": "python385jvsc74a57bd0bc35b5ffc8f6562ab4deb4370e811664ba3c75a97eef4ba2623a917286552588",
    "display_name": "Python 3.8.5 64-bit (conda)"
   },
   "language_info": {
