--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1,61 +1,45 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# Hypothesis: "
-   ]
+    "# Exploratory Data Analysis: ANZ Synthesized 3-month Transactional Dataset\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before running the analysis, the table data has been split up into 4 different tables:\n",
-    "- original data\n",
-    "    - this is where overview will be carried out on the most important big picture view to tell the data story\n",
-    "- authorized transactions\n",
-    "    - these transactions would be reviewed, most importantly trying to understand the security aspect of it to help the cybersecurity team to understand potential security risks that can be garnered from the data.\n",
-    "- posted transactions\n",
-    "    - These transactions have missing fields, making it hard to track\n",
-    "- corporate transactions"
+    "## Step 0: Loading the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# These are necessary libraries that is enabled in Python to perform the analysis\n",
+    "# These are the necessary Python libraries to perform EDA\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 'DATA/original-data.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# referencing the csv file as file\n",
+    "file = 'DATA/original-data.csv'\n",
+    "# file is read into a dataframe via read_csv method\n",
     "df = pd.read_csv(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -70,16 +54,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 226
+     "execution_count": 170
     }
    ],
    "source": [
+    "# confirmation of existing columns of file on load\n",
     "df.columns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -107,16 +92,91 @@
       ]
      },
      "metadata": {},
-     "execution_count": 227
+     "execution_count": 171
     }
    ],
    "source": [
+    "# confirmation of data types prior to conversion\n",
     "df.dtypes"
    ]
   },
   {
+   "source": [
+    "## Step 1: Data Wrangling"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "It is important that data can be parsed for a variety of downstream purposes. The data below will be converted into the appropriate data types for assuring data quality and usefulness."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0       2018-08-01 01:01:15+00:00\n",
+       "1       2018-08-01 01:13:45+00:00\n",
+       "2       2018-08-01 01:26:15+00:00\n",
+       "3       2018-08-01 01:38:45+00:00\n",
+       "4       2018-08-01 01:51:15+00:00\n",
+       "                   ...           \n",
+       "12038   2018-10-31 23:09:06+00:00\n",
+       "12039   2018-10-31 23:21:46+00:00\n",
+       "12040   2018-10-31 23:34:25+00:00\n",
+       "12041   2018-10-31 23:47:05+00:00\n",
+       "12042   2018-10-31 23:59:44+00:00\n",
+       "Name: timestamp, Length: 12043, dtype: datetime64[ns, UTC]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 173
+    }
+   ],
+   "source": [
+    "# convert timestamp data into datetime64 format\n",
+    "pd.to_datetime(df.timestamp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set timestamp as an index\n",
+    "df.set_index('timestamp', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert status into categorical data type\n",
+    "s = pd.CategoricalDtype(categories=['authorized', 'posted'], ordered=True)\n",
+    "df.status = df.status.astype(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +204,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 228
+     "execution_count": 172
     }
    ],
    "source": [
@@ -153,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +250,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 230
+     "execution_count": 78
     }
    ],
    "source": [
@@ -199,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -221,76 +281,213 @@
       ]
      },
      "metadata": {},
-     "execution_count": 258
+     "execution_count": 79
     }
    ],
    "source": [
-    "pd.to_datetime(df.timestamp, infer_datetime_format=False, format='%m/%d/%y')"
+    "pd.to_datetime(df.timestamp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Timestamp('1677-09-21 00:12:43.145225')"
+       "Int64Index([2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018,\n",
+       "            ...\n",
+       "            2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018, 2018],\n",
+       "           dtype='int64', name='timestamp', length=12043)"
       ]
      },
      "metadata": {},
-     "execution_count": 252
+     "execution_count": 144
     }
    ],
    "source": [
-    "pd.Timestamp.min"
+    "df.index.year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0        08/01/18\n",
-       "1        08/01/18\n",
-       "2        08/01/18\n",
-       "3        08/01/18\n",
-       "4        08/01/18\n",
-       "           ...   \n",
-       "12038    10/31/18\n",
-       "12039    10/31/18\n",
-       "12040    10/31/18\n",
-       "12041    10/31/18\n",
-       "12042    10/31/18\n",
-       "Name: timestamp, Length: 12043, dtype: object"
+       "Int64Index([ 8,  8,  8,  8,  8,  8,  8,  8,  8,  8,\n",
+       "            ...\n",
+       "            10, 10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
+       "           dtype='int64', name='timestamp', length=12043)"
       ]
      },
      "metadata": {},
-     "execution_count": 255
+     "execution_count": 145
     }
    ],
    "source": [
-    "df.timestamp.dt.strftime(\"%m/%d/%y\")"
+    "df.index.month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([datetime.time(1, 1, 15), datetime.time(1, 13, 45),\n",
+       "       datetime.time(1, 26, 15), ..., datetime.time(23, 34, 25),\n",
+       "       datetime.time(23, 47, 5), datetime.time(23, 59, 44)], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 146
+    }
+   ],
+   "source": [
+    "df.index.time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['08/01/2018', '08/01/2018', '08/01/2018', '08/01/2018', '08/01/2018',\n",
+       "       '08/01/2018', '08/01/2018', '08/01/2018', '08/01/2018', '08/01/2018',\n",
+       "       ...\n",
+       "       '10/31/2018', '10/31/2018', '10/31/2018', '10/31/2018', '10/31/2018',\n",
+       "       '10/31/2018', '10/31/2018', '10/31/2018', '10/31/2018', '10/31/2018'],\n",
+       "      dtype='object', name='timestamp', length=12043)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 156
+    }
+   ],
+   "source": [
+    "df.index.strftime('%m/%d/%Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['01:01', '01:13', '01:26', '01:38', '01:51', '02:00', '02:23', '04:11',\n",
+       "       '04:40', '06:00',\n",
+       "       ...\n",
+       "       '22:22', '22:51', '23:00', '23:00', '23:00', '23:09', '23:21', '23:34',\n",
+       "       '23:47', '23:59'],\n",
+       "      dtype='object', name='timestamp', length=12043)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 157
+    }
+   ],
+   "source": [
+    "df.index.strftime('%H:%M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['Wednesday', 'Wednesday', 'Wednesday', 'Wednesday', 'Wednesday',\n",
+       "       'Wednesday', 'Wednesday', 'Wednesday', 'Wednesday', 'Wednesday',\n",
+       "       ...\n",
+       "       'Wednesday', 'Wednesday', 'Wednesday', 'Wednesday', 'Wednesday',\n",
+       "       'Wednesday', 'Wednesday', 'Wednesday', 'Wednesday', 'Wednesday'],\n",
+       "      dtype='object', name='timestamp', length=12043)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 152
+    }
+   ],
+   "source": [
+    "df.index.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "PeriodIndex(['2018-08', '2018-08', '2018-08', '2018-08', '2018-08', '2018-08',\n",
+       "             '2018-08', '2018-08', '2018-08', '2018-08',\n",
+       "             ...\n",
+       "             '2018-10', '2018-10', '2018-10', '2018-10', '2018-10', '2018-10',\n",
+       "             '2018-10', '2018-10', '2018-10', '2018-10'],\n",
+       "            dtype='period[M]', name='timestamp', length=12043, freq='M')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 165
+    }
+   ],
+   "source": [
+    "df.index.to_period('M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Timestamp('2262-04-11 23:47:16.854775807')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "pd.Timestamp.max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['date'] = pd.to_datetime(df['date'])"
+    "df.set_index('timestamp', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
