--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 170
+     "execution_count": 25
     }
    ],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 171
+     "execution_count": 26
     }
    ],
    "source": [
@@ -109,74 +109,23 @@
   },
   {
    "source": [
-    "It is important that data can be parsed for a variety of downstream purposes. The data below will be converted into the appropriate data types for assuring data quality and usefulness."
+    "* It is important that data can be parsed for a variety of downstream purposes. \n",
+    "* The data below will be converted into the appropriate data types for assuring data quality and usefulness.\n",
+    "* The guidelines for the conversion are laid out in the data dictionary. Please refer to readme.md file"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Dealing with missing values"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0       2018-08-01 01:01:15+00:00\n",
-       "1       2018-08-01 01:13:45+00:00\n",
-       "2       2018-08-01 01:26:15+00:00\n",
-       "3       2018-08-01 01:38:45+00:00\n",
-       "4       2018-08-01 01:51:15+00:00\n",
-       "                   ...           \n",
-       "12038   2018-10-31 23:09:06+00:00\n",
-       "12039   2018-10-31 23:21:46+00:00\n",
-       "12040   2018-10-31 23:34:25+00:00\n",
-       "12041   2018-10-31 23:47:05+00:00\n",
-       "12042   2018-10-31 23:59:44+00:00\n",
-       "Name: timestamp, Length: 12043, dtype: datetime64[ns, UTC]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 173
-    }
-   ],
-   "source": [
-    "# convert timestamp data into datetime64 format\n",
-    "pd.to_datetime(df.timestamp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set timestamp as an index\n",
-    "df.set_index('timestamp', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert status into categorical data type\n",
-    "s = pd.CategoricalDtype(categories=['authorized', 'posted'], ordered=True)\n",
-    "df.status = df.status.astype(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -204,25 +153,36 @@
       ]
      },
      "metadata": {},
-     "execution_count": 172
+     "execution_count": 27
     }
    ],
    "source": [
+    "# display all missing values\n",
     "df.isna().sum()"
    ]
   },
   {
+   "source": [
+    "* All the columns missing values such as card_present_cat, merch_suburb, merch_state and merch geometry as displayed above all have trasitive dependencies with status, such that the value posted determines a null value for these columns. Several options can be considered:\n",
+    "  * Removing the rows: This task prioritizes a time series analysis for the transactions so removing the rows will not be preferable as that would remove valuable data we want to keep\n",
+    "  * Filling missing values with 0: This is a good choice given that all of the columns with missing values would not be affected by this change. This is because these columns a trasitively dependent on status, therefore not causing any conflicts for the analysis. Card_present_cat field will also not be affected by the insertion of more 0s as it is still treated as False when converted to Boolean, which is done in the following code executions.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fill missing columns with 0\n",
     "df.fillna(0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -250,16 +210,24 @@
       ]
      },
      "metadata": {},
-     "execution_count": 78
+     "execution_count": 31
     }
    ],
    "source": [
+    "# check if all missing values have been replaced\n",
     "df.isna().sum()"
    ]
   },
   {
+   "source": [
+    "### Data type conversion"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -281,12 +249,140 @@
       ]
      },
      "metadata": {},
-     "execution_count": 79
+     "execution_count": 32
     }
    ],
    "source": [
+    "# convert timestamp data into datetime64 format\n",
     "pd.to_datetime(df.timestamp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set timestamp as an index\n",
+    "df.set_index('timestamp', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert status into categorical data type\n",
+    "s = pd.CategoricalDtype(categories=['authorized', 'posted'], ordered=True)\n",
+    "df.status = df.status.astype(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert card_present_cat into category data type with values 1 and 0\n",
+    "cpc = pd.CategoricalDtype(categories=[1, 0], ordered=True)\n",
+    "df.card_present_cat = df.card_present_cat.astype(cpc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create new Boolean column named card_present_bool\n",
+    "b = pd.BooleanDtype()\n",
+    "df['card_present_bool'] = df.card_present_cat.astype(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert gender into category data type with values M and F\n",
+    "g = pd.CategoricalDtype(categories=['M', 'F'], ordered=True)\n",
+    "df.gender = df.gender.astype(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert age into int32 data type\n",
+    "df.age = df.age.astype('int32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert txn_description field into category data type\n",
+    "td = pd.CategoricalDtype(categories=['POS','SALES-POS','PAYMENT','INTER BANK','PAY/SALARY','PHONE BANK'], ordered=True)\n",
+    "df.txn_description = df.txn_description.astype(td)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "date                   object\n",
+       "status               category\n",
+       "age                     int32\n",
+       "gender               category\n",
+       "txn_description        object\n",
+       "balance               float64\n",
+       "amount                float64\n",
+       "card_present_cat     category\n",
+       "long                  float64\n",
+       "lat                   float64\n",
+       "geometry               object\n",
+       "merch_suburb           object\n",
+       "merch_state            object\n",
+       "merch_geometry         object\n",
+       "merch_long            float64\n",
+       "merch_lat             float64\n",
+       "card_present_bool     boolean\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "source": [
+    "# check all data types have been converted correctly\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "source": [
+    "## Step 2: Overview"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -458,73 +554,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Timestamp('2262-04-11 23:47:16.854775807')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 18
-    }
-   ],
-   "source": [
-    "pd.Timestamp.max"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.set_index('timestamp', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "s = pd.CategoricalDtype(categories=['authorized', 'posted'], ordered=True)\n",
     "df.status = df.status.astype(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0        authorized\n",
-       "1        authorized\n",
-       "2        authorized\n",
-       "3        authorized\n",
-       "4        authorized\n",
-       "            ...    \n",
-       "12038    authorized\n",
-       "12039    authorized\n",
-       "12040    authorized\n",
-       "12041    authorized\n",
-       "12042    authorized\n",
-       "Name: status, Length: 12043, dtype: category\n",
-       "Categories (2, object): ['authorized' < 'posted']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 151
-    }
-   ],
-   "source": [
-    "df.status"
    ]
   },
   {
@@ -648,16 +683,6 @@
    ],
    "source": [
     "df.age"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cpc = pd.CategoricalDtype(categories=[1, 0], ordered=True)\n",
-    "df.card_present_cat = df.card_present_cat.astype(cpc)"
    ]
   },
   {
